--- a/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/services.less
+++ b/hybris-sagia/hybris/bin/custom/sagia/sagiastorefront/web/webroot/WEB-INF/_ui-src/responsive/themes/alpha/less/eservices/services.less
@@ -154,7 +154,7 @@
 .serviceModule-detail {
     p,li,h2{
         text-align: left;
-        font-weight:600;
+        font-weight:500;
         font-size: 20px;
         letter-spacing: 0px;
         color: @color-text;
